admission/ValidatingAdmissionPolicy/policies/livenessprobe-httpget-host/initcontainers/deny.yaml
apiVersion: v1
kind: Pod
metadata:
  name: livenessprobe-httpget-host-initcontainers
  annotations:
    kubeapt.io/uuid: "2fedfec0-bde4-4c12-ab33-7d9ff294b3fe"
spec:
  containers:
  - name: main
    image: busybox:1.36
    command:
    - sh
    - -c
    - sleep 3600
